developers-reference (2.7.1) unstable; urgency=low

  * Sec. "Registering as a Debian developer": we are transitioning away
    from non-free PGP -- remove allusions to non-free software such as
    PGPv2 or v5 insofar as possible; recommend use of DSA keys rather than
    RSA
  * Sec. "Maintaining Your Public Key": remove PGP-centric stuff

 -- Adam Di Carlo <aph@debian.org>  Sat, 11 Sep 1999 16:20:32 -0400

developers-reference (2.7.0) unstable; urgency=low

  * developers-reference.sgml: separated out language-independant elements
    into common.ent (not content changes); misc minor grammar changes
    throughout
  * doc-base: change section for *constitution* to Debian (not 'debian')
    (closes Bug#37392)
  * Sec. "Stable, unstable, and sometimes frozen": mention how old stable
    releases are available at archive.debian.org
  * Sec. "Uploading to pandora (non-us)" added, remove stale
    information about the old anonymous ftp area (closes Bug#39541);
    Sec. "Other Upload Queues" added about that upload queues, added
    samosa and master.debian.org.jp (closes Bug#37804)
  * Sec. "Yada": mention that yada might not be as robust as other package
    producing systems, at request of the author; Sec. "equivs" added
  * Sec. "Moving packages": at the request of Guy Maor, clarify that this
    procedure is for moving packages in sections (i.e., free, contrib)
    only
  * Sec. "Registering as a Debian developer": talk about RSA keys rather
    than PGP keys, since I think GPG can create/handle them now; mention
    that the official pkg maintainer address much match an ID on your key;
  * Sec. "Maintaining Your Public Key": beef up the warnings a bit; point
    to the PGP FAQ
  * Sec. "Mailing Lists, Servers, and Other Machines": clean up and
    clarify section; mention that all developers are expected to be
    subscribed to debian-private and debian-devel-announce
  * Sec. "Other Debian Machines": remove list of machines; point to