@@ -12,8 +12,3 @@ Description: Debian Developer's Reference
  .
  Table of Contents:
  .
-      1 Applying to Become a Maintainer 
-      2 Internet Servers 
-      3 The Debian Archive
-      4 Package uploads
-      5 Handling bug reports
