@@ -5,8 +5,11 @@ developers-reference (2.7.1) unstable; urgency=low
     PGPv2 or v5 insofar as possible; recommend use of DSA keys rather than
     RSA
   * Sec. "Maintaining Your Public Key": remove PGP-centric stuff
+  * developers-reference.sgml: re-enable RCS variables in CVS sources
+  * debian/control,rules: dynamically generate the TOC in the package
+    description from developers-reference.sgml
 
- -- Adam Di Carlo <aph@debian.org>  Sat, 11 Sep 1999 16:20:32 -0400
+ -- Adam Di Carlo <aph@debian.org>  Sat, 11 Sep 1999 21:22:10 -0400
 
 developers-reference (2.7.0) unstable; urgency=low
 
